Fix z-index of dialogs

--- a/src/models/applayout/style.css
+++ b/src/models/applayout/style.css
@@ -222,6 +222,7 @@ div[dialog] {
     width: 500px;
     height: 300px;
     margin: auto;
+    z-index: 1;
     border-radius: 10px;
     opacity: 0;
 }
